# Hello-Django-Ninja-Api

./: .coverage  .env.example  .gitignore  .mypy.ini  README.md  add_missing_fields.py  create_tables.py  create_test_data.py  db.sqlite3  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.qoder/plans/: 数据库迁移与接口测试计划_39530b91.md
.qoder/repowiki/zh/content/: 快速开始.md  (+9 more)
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  testing.py
docker/: Dockerfile  docker-compose.yml
docs/: AUTHENTICATION.md  CODE_QUALITY_REPORT.md  DEVELOPMENT.md
scripts/: check_and_fix.py  deploy_and_test.py  init_admin.py  integration_test.py  lint.sh  migrate.sh  migrate_database.py  migrate_db.bat  run_all.bat  setup_dev.bat  setup_dev.sh  simple_check.py  step1_migrate.py  test.sh
skills/: .skills_store_lock.json
skills/python-code-test/: _meta.json
skills/python-code-test/scripts/: main.py
skills/python-script-generator/: _meta.json
sql/: rbac.sql
src/api/: __init__.py  app.py
src/api/common/: __init__.py  decorators.py  permissions.py  responses.py
src/api/v1/: auth_api.py  rbac_api.py  security_api.py  system_api.py  user_api.py
src/application/: __init__.py
src/application/dto/: __init__.py  auth_dto.py  rbac_dto.py  security_dto.py  user_dto.py
src/application/services/: __init__.py  auth_service.py  rbac_service.py  security_service.py  system_service.py  user_service.py
src/core/: __init__.py  constants.py  exceptions.py  logger.py  utils.py
src/core/decorators/: __init__.py  operation_log.py
src/core/exceptions/: __init__.py  authentication_error.py  base.py  invalid_credentials_error.py  ip_blocked_error.py  permission_denied_error.py  rate_limit_error.py  resource_already_exists_error.py  resource_not_found_error.py  token_error.py  user_inactive_error.py  validation_error.py
src/core/middlewares/: __init__.py  ip_limit_middleware.py  rate_limit_middleware.py  request_logging_middleware.py  security_middleware.py
src/domain/: __init__.py
src/domain/auth/: __init__.py
src/domain/rbac/: __init__.py
src/domain/security/: __init__.py
src/domain/user/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: model_adapter.py
src/infrastructure/auth_jwt/: __init__.py  global_auth.py  jwt_manager.py  token_validator.py
src/infrastructure/cache/: __init__.py  cache_manager.py  cache_strategies.py  redis_cache.py
src/infrastructure/ip_management/: __init__.py
src/infrastructure/persistence/: __init__.py  apps.py
tests/: conftest.py
tests/test_api/: test_auth_api.py  test_rbac_api.py  test_security_api.py  test_system_api.py  test_user_api.py
tests/test_middleware/: test_rate_limit_middleware.py
tests/test_middlewares/: __init__.py  test_rate_limit_middleware.py
tests/test_models/: __init__.py  test_rbac_models.py  test_user_models.py
tests/test_services/: __init__.py  test_auth_service.py  test_user_service.py
(+182 files in other folders)
